change render deployment files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "npm install && npm run build",
+    "build": "cd shopify-next && npm install && npm run build",
     "start": "node server.js"
   }
 }
