--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "npm install && npm run build",
+    "build": "npm install --prefix shopify-next && npm run build --prefix shopify-next",
     "start": "node server.js"
   }
 }
